# Othello

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: board.h  game.h  helper.h  net.h  netlinux.h
src/: CMakeLists.txt  board.cpp  game.cpp  game.h  helper.cpp  helper.h  main.cpp  netlinux.cpp
